<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TipFragment">

    <data>
        <variable
            name="tipFragment"
            type="eu.tutorials.tip.TipFragment" />
        <variable
            name="tipViewModel"
            type="eu.tutorials.tip.model.TipViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_store"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cost_of_service"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_view_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_service"
                app:layout_constraintTop_toTopOf="@+id/text_view"
                app:layout_constraintBottom_toBottomOf="@+id/text_view"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_view"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/how_was_the_service"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_2"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

            <RadioGroup
                android:id="@+id/radio_group"
                style="@style/Widget.Tip.CompoundButton.RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/amazing_radio_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_view"
                app:layout_constraintTop_toBottomOf="@+id/text_view">

                <RadioButton
                    android:id="@+id/amazing_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> tipViewModel.setPercentage(0.2)}"
                    android:text="@string/amazing" />

                <RadioButton
                    android:id="@+id/good_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> tipViewModel.setPercentage(0.18)}"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/okay_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> tipViewModel.setPercentage(0.15)}"
                    android:text="@string/okay" />
            </RadioGroup>

            <ImageView
                android:id="@+id/image_view_3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_round_up"
                app:layout_constraintBottom_toBottomOf="@+id/switch_material"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/switch_material" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_material"
                style="@style/Widget.Tip.CompoundButton.Switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/round_up_tip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_3"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/calculate"
                android:onClick="@{() -> tipFragment.onCalculate()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/switch_material"
                app:layout_constraintTop_toBottomOf="@+id/switch_material" />

            <TextView
                android:id="@+id/text_view_3"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{@string/tip_amount(tipViewModel.tip)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                tools:text="Tip Amount: R20,00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>